--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.12",
+    "gulp-notify": "^3.0.0",
     "gulp-sass": "^3.1.0",
     "node-sass": "^4.5.3"
   },
