--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-tap": "^1.0.1",
     "gulp-uglify": "^3.0.0",
+    "json-server": "^0.11.2",
     "node-sass": "^4.5.3",
     "postcss": "^6.0.8"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server":"json-server --static ./dist --port 3100 db.json"
   },
   "repository": {
     "type": "git",
