--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/newsaeta/html_avanzado.git"
+    "url": "git+https://github.com/newsaeta/html_avanzado.git"
   },
   "author": "",
   "license": "ISC",
