--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-install": "^1.1.0",
     "jquery": "^3.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
-    "browser-sync": "^2.18.12",
+    "browser-sync": "^2.18.13",
     "browserify": "^14.4.0",
     "cssnano": "^3.10.0",
+    "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-html-import": "0.0.2",
     "gulp-htmlmin": "^3.0.0",
     "gulp-notify": "^3.0.0",
@@ -28,7 +31,7 @@
     "postcss": "^6.0.8"
   },
   "scripts": {
-    "server":"json-server --static ./dist --port 3100 db.json"
+    "server": "json-server --static ./dist --port 3100 db.json"
   },
   "repository": {
     "type": "git",
@@ -39,5 +42,6 @@
   "bugs": {
     "url": "https://github.com/newsaeta/html_avanzado/issues"
   },
-  "homepage": "https://github.com/newsaeta/html_avanzado#readme"
+  "homepage": "https://github.com/newsaeta/html_avanzado#readme",
+  "keywords": []
 }
